# simpleANN

./: CMakeLists.txt  main.c  node.c  node.h  nodeTests.c  nodeTests.h  stack.c  stack.h
